--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
-# Python-generated files
+# Python
 __pycache__/
-*.py[oc]
+*.py[co]
+
+# Packaginmg
 build/
 dist/
 wheels/
-*.egg-info
+*.egg*
 
-# Virtual environments
-.venv
+# Editor temp files
+*~
+
+# Ignore dot files / directories except those required for the project
+.*
+!.envrc
+!.gitignore
+!.python-version
