Restructure the project to use a src directory
This is overkill for a single script, however if we ever want to
separate out the templates into files, life will be easier.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cvescan"
 version = "0.1.0"
-description = "Add your description here"
+description = "Scan package dependency files for known CVE vulnerabilities using the OSV database"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -10,3 +10,6 @@ dependencies = [
 
 [project.scripts]
 cvescan = "cvescan:main"
+
+[tool.uv]
+package = true
